--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "parcel:serve": "parcel -p 8123 --target web --open",
     "parcel:build": "parcel build --target web --no-source-maps --no-cache",
     "clean": "rimraf dist .cache .cache-loader .parcel-cache",
-    "dev": "npm-run-all clean parcel:serve",
+    "dev": "npm-run-all clean stylelint parcel:serve",
     "build": "npm-run-all clean stylelint parcel:build",
     "test": "echo 'Everything is working as expected ✅\nStart working on your project by running \\033[1mnpm run dev\\033[0m'",
     "stylelint": "stylelint src/**/*.scss"
@@ -37,6 +37,7 @@
   "homepage": "https://github.com/uoc-advanced-html-css/uoc-boilerplate#readme",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.12.0",
+    "@stylistic/stylelint-plugin": "^3.1.1",
     "autoprefixer": "^10.4.15",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.12.0",
@@ -45,11 +46,8 @@
     "rimraf": "^5.0.1",
     "sharp": "^0.31.3",
     "stylelint": "^16.10.0",
-    "stylelint-color-contrast": "^0.0.0",
-    "stylelint-color-format": "^1.1.0",
     "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-recommended-scss": "^14.1.0",
-    "stylelint-no-unsupported-browser-features": "^8.0.2",
     "stylelint-scss": "^6.8.1",
     "stylelint-use-logical": "^2.1.2"
   },
